src/main/java/com/revolvingmadness/testing/language/errors/InternalError.java
package com.revolvingmadness.testing.language.errors;

public class InternalError extends Error {
    public InternalError(String message) {
        super(message);
    }
}
